<resources>
    <string name="app_name">Restauration Manager</string>

    <string name="welcome">Bienvenue</string>

    <!-- Strings related to login and register -->
    <string name="prompt_first_name">Prénom</string>
    <string name="prompt_last_name">Nom</string>
    <string name="prompt_telephone">Téléphone portable</string>
    <string name="prompt_sex_man">Masculin</string>
    <string name="prompt_sex_woman">Féminin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_confirm_password">Confirmation mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_register">S\'inscrire</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="error_invalid_email">Email invalide</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_not_same_passwords">Mots de passe non identiques</string>
    <string name="error_field_required">Champ requis</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Restauration Manager</string>
    <string name="title_activity_register">Création de compte</string>
    <string name="title_activity_welcome">Accueil</string>
    <string name="title_activity_login">Page de connexion</string>
    <string name="title_activity_ok">Sign in</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string-array name="country_arrays">
        <item>France</item>
        <item>USA</item>
        <item>England</item>
        <item>Italia</item>
        <item>India</item>
        <item>Indonesia</item>
    </string-array>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_add_menu">AddMenuActivity</string>
    <string name="title_activity_display_product">DisplayProductActivity</string>
</resources>
